--- a/css/main.css
+++ b/css/main.css
@@ -730,8 +730,9 @@ img::-moz-selection {
     display: inline-block;
     position: relative;
     width: 100%;
+    font-size: 20px;
     border-color: #666;
-    color: #666;
+    color: #f00;
     /*opacity: .8; */
   }
 
