--- a/css/main.css
+++ b/css/main.css
@@ -730,9 +730,9 @@ img::-moz-selection {
     display: inline-block;
     position: relative;
     width: 100%;
-    font-size: 20px;
+    font-size: 16px;
     border-color: #666;
-    color: #f00;
+    color: #fff;
     /*opacity: .8; */
   }
 
